Added function for creating chunks from corpora.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@845 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/NAMESPACE
+++ b/trunk/tm/NAMESPACE
@@ -10,6 +10,7 @@ export(
        "getFilters",
        "getReaders",
        "getTransformations",
+       "makeChunks",
        "materialize",
        "readPlain",
        "readReut21578XML",
