Added as.matrix() method for TermDocMatrix.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@846 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/trunk/tm/NAMESPACE
+++ b/trunk/tm/NAMESPACE
@@ -118,6 +118,7 @@ exportMethods(
               "tmIndex",
               "searchFullText",
               "tmIntersect",
+              "as.matrix",
               "dim",
               "dimnames",
               "ncol",
