--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.3-3.3
-Date: 2008-03-10
+Date: 2008-03-20
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), Matrix, methods
@@ -9,3 +9,4 @@ Suggests: filehash, proxy, Rgraphviz, Rmpi, Rstem (>= 0.3-1), snow, Snowball, XM
 LazyLoad: yes
 Description: A framework for text mining applications within R.
 License: GPL-2
+URL: http://tm.r-forge.r-project.org/
