Added reader which can be customized via user-defined mappings.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@908 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -12,6 +12,7 @@ export(
        "getTransformations",
        "makeChunks",
        "materialize",
+       "readCustom",
        "readPlain",
        "readReut21578XML",
        "readRCV1",
