Sources now can be vectorized.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@909 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -96,6 +96,7 @@ exportMethods(
               # Sources
               "stepNext",
               "getElem",
+              "pGetElem",
               "eoi",
 
               # Functions
