CSVSource is defunct.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@910 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -43,7 +43,7 @@ exportMethods(
               "Dictionary",
               "DirSource",
               "VectorSource",
-              "CSVSource",
+              "CSVSource", # defunct
               "ReutersSource",
               "GmaneSource",
               "URISource",
@@ -162,7 +162,6 @@ exportClasses("TextDocument",
               "DataframeSource",
               "DirSource",
               "VectorSource",
-              "CSVSource",
               "ReutersSource",
               "GmaneSource",
               "URISource",
