New reader for arbitrary XML formats.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@912 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -23,6 +23,7 @@ export(
        "readPDF",
        "readHTML",
        "readDOC",
+       "readXML",
        "ReutersSource",
        "convertReut21578XMLPlain",
        "convertRCV1Plain",
