tmReduce() allows to combine multiple maps into one transformation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@926 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -32,8 +32,9 @@ export(
        "sFilter",
        "preprocessReut21578XML",
        "stopwords",
-       "TermDocMatrix",
+       "TermDocMatrix", # defunct
        "termFreq",
+       "tmReduce",
        "weightTf",
        "weightTfIdf",
        "weightBin",
