--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-3.5
-Date: 2008-04-16
+Version: 0.3-4
+Date: 2008-04-26
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <feinerer@logic.at>
-Depends: R (>= 2.7.0), Matrix, methods
+Depends: R (>= 2.7.0), methods
 Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 LazyLoad: yes
 Description: A framework for text mining applications within R.
