Experimental FCorpus (fast corpus).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@950 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -13,6 +13,7 @@ export(
        "DocumentTermMatrix",
        "stemCompletion",
        "GmaneSource",
+       "FCorpus",
        "findAssocs",
        "findFreqTerms",
        "getFilters",
@@ -58,6 +59,10 @@ export(
        "XMLSource")
 
 S3method("Dictionary", "character")
+
+S3method("TermDocumentMatrix", "FCorpus")
+
+S3method("print", "MinimalDocument")
 
 S3method("inspect", "SCorpus")
 S3method("TermDocumentMatrix", "SCorpus")
