Further work on FCorpus integration.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@952 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -60,6 +60,7 @@ export(
 
 S3method("Dictionary", "character")
 
+S3method("inspect", "FCorpus")
 S3method("TermDocumentMatrix", "FCorpus")
 
 S3method("print", "MinimalDocument")
