Add slam dependency and readReut21578XMLasPlain reader.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@960 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.4
-Date: 2009-06-17
+Date: 2009-06-26
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
-Depends: R (>= 2.7.0), methods
+Depends: R (>= 2.7.0), methods, slam
 Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 LazyLoad: yes
 Description: A framework for text mining applications within R.
