Export readReut21578XMLasPlain.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@961 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -27,6 +27,7 @@ export(
        "nTerms",
        "readPlain",
        "readReut21578XML",
+       "readReut21578XMLasPlain",
        "readRCV1",
        "readNewsgroup",
        "readGmane",
