Conversion to UTF-8 encoding.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@976 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -3,6 +3,7 @@ import(slam)
 
 export(
        "activateCluster",
+       "convert_UTF_8",
        "Corpus", # alias to VCorpus
        "CSVSource", # defunct
        "DataframeSource",
