Factor out mail handling functionality to tm.plugin.mail package.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@981 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,8 +1,7 @@
 import(methods)
 import(slam)
 
-export(
-       "activateCluster",
+export("activateCluster",
        "convert_UTF_8",
        "Corpus", # alias to VCorpus
        "CSVSource", # defunct
@@ -42,7 +41,6 @@ export(
        "ReutersSource",
        "convertReut21578XMLPlain",
        "convertRCV1Plain",
-       "convertMboxEml",
        "sFilter",
        "PCorpus",
        "prescindMeta",
