Remove extra LICENCE file, as we want GPL.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1003 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -8,5 +8,5 @@ Depends: R (>= 2.7.0)
 Imports: slam (>= 0.1-1)
 Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 Description: A framework for text mining applications within R.
-License: GPL (>= 2) | file LICENCE
+License: GPL (>= 2)
 URL: http://tm.r-forge.r-project.org/
