Added a combine method for merging multiple term-document matrices.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1022 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -152,6 +152,7 @@ S3method("as.PlainTextDocument", "Reuters21578Document")
 
 S3method("stepNext", "Source")
 
+S3method("c", "TermDocumentMatrix")
 S3method("[", "TermDocumentMatrix")
 S3method("Dictionary", "TermDocumentMatrix")
 S3method("dissimilarity", "TermDocumentMatrix")
