Add readRCV1asPlain reader.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1035 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -46,6 +46,7 @@ export("as.PlainTextDocument",
        "readReut21578XML",
        "readReut21578XMLasPlain",
        "readRCV1",
+       "readRCV1asPlain",
        "readGmane",
        "readPDF",
        "readTabular",
