Add tm_tag_score method for term-document matrices.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1050 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -167,6 +167,7 @@ S3method("inspect", "TermDocumentMatrix")
 S3method("plot", "TermDocumentMatrix")
 S3method("print", "TermDocumentMatrix")
 S3method("t", "TermDocumentMatrix")
+S3method("tm_tag_score", "TermDocumentMatrix")
 
 S3method("c", "TextDocument")
 S3method("meta", "TextDocument")
