First attempt for weightings using SMART notation.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1055 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -91,6 +91,7 @@ export("as.PlainTextDocument",
        "weightTf",
        "weightTfIdf",
        "weightBin",
+       "weightSMART",
        "writeCorpus",
        "XMLSource")
 
