content_or_meta utility function
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1062 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,6 +6,7 @@ export("as.PlainTextDocument",
        "convert_UTF_8",
        "Content",
        "Content<-",
+       "content_or_meta<-",
        "Corpus", # alias to VCorpus
        "DataframeSource",
        "DateTimeStamp",
