Improve stem completion.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1068 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -97,6 +97,7 @@ export("as.PlainTextDocument",
        "XMLSource")
 
 S3method("Dictionary", "character")
+S3method("stemCompletion", "character")
 S3method("stemDocument", "character")
 
 S3method("c", "Corpus")
@@ -149,6 +150,7 @@ S3method("removeNumbers", "PlainTextDocument")
 S3method("removePunctuation", "PlainTextDocument")
 S3method("removeWords", "PlainTextDocument")
 S3method("searchFullText", "PlainTextDocument")
+S3method("stemCompletion", "PlainTextDocument")
 S3method("stemDocument", "PlainTextDocument")
 S3method("stripWhitespace", "PlainTextDocument")
 S3method("tm_intersect", "PlainTextDocument")
