Added documentation for content_meta()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1069 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,7 +6,7 @@ export("as.PlainTextDocument",
        "convert_UTF_8",
        "Content",
        "Content<-",
-       "content_or_meta<-",
+       "content_meta<-",
        "Corpus", # alias to VCorpus
        "DataframeSource",
        "DateTimeStamp",
@@ -92,7 +92,7 @@ export("as.PlainTextDocument",
        "weightTf",
        "weightTfIdf",
        "weightBin",
-       "weightSMART",
+#       "weightSMART",
        "writeCorpus",
        "XMLSource")
 
