Export Zipf_plot() and Heaps_plot()
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1076 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -26,6 +26,7 @@ export("as.PlainTextDocument",
        "getElem",
        "GmaneSource",
        "Heading",
+       "Heaps_plot",
        "findAssocs",
        "findFreqTerms",
        "getFilters",
@@ -94,7 +95,8 @@ export("as.PlainTextDocument",
        "weightBin",
 #       "weightSMART",
        "writeCorpus",
-       "XMLSource")
+       "XMLSource",
+       "Zipf_plot")
 
 S3method("Dictionary", "character")
 S3method("stemCompletion", "character")
