Comment out words() for the moment.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1119 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -93,7 +93,7 @@ export("as.PlainTextDocument",
        "weightTfIdf",
        "weightBin",
 #       "weightSMART",
-       "words",
+#       "words",
        "writeCorpus",
        "XMLSource",
        "Zipf_plot")
