Add functionality for obtaining DTMs and TDMs from t/f matrices coercible to simple triplet matrices.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1128 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -121,6 +121,7 @@ S3method("getElem", "DirSource")
 S3method("pGetElem", "DirSource")
 
 S3method("[", "DocumentTermMatrix")
+S3method("c", "DocumentTermMatrix")
 S3method("Dictionary", "DocumentTermMatrix")
 S3method("dissimilarity", "DocumentTermMatrix")
 S3method("findAssocs", "DocumentTermMatrix")
@@ -206,5 +207,15 @@ S3method("Content<-", "XMLDocument")
 
 S3method("eoi", "XMLSource")
 S3method("getElem", "XMLSource")
+
+export("as.DocumentTermMatrix",
+       "as.TermDocumentMatrix")
+
+S3method("as.DocumentTermMatrix", "DocumentTermMatrix")
+S3method("as.DocumentTermMatrix", "TermDocumentMatrix")
+S3method("as.DocumentTermMatrix", "default")
+S3method("as.TermDocumentMatrix", "TermDocumentMatrix")
+S3method("as.TermDocumentMatrix", "DocumentTermMatrix")
+S3method("as.TermDocumentMatrix", "default")
 
 useDynLib("tm")
