Export and document Blei et al reader.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/tm@1135 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -123,6 +123,7 @@ S3method("pGetElem", "DirSource")
 S3method("[", "DocumentTermMatrix")
 S3method("c", "DocumentTermMatrix")
 S3method("Dictionary", "DocumentTermMatrix")
+S3method("dimnames<-", "DocumentTermMatrix")
 S3method("dissimilarity", "DocumentTermMatrix")
 S3method("findAssocs", "DocumentTermMatrix")
 S3method("inspect", "DocumentTermMatrix")
@@ -170,6 +171,7 @@ S3method("stepNext", "Source")
 S3method("c", "TermDocumentMatrix")
 S3method("[", "TermDocumentMatrix")
 S3method("Dictionary", "TermDocumentMatrix")
+S3method("dimnames<-", "TermDocumentMatrix")
 S3method("dissimilarity", "TermDocumentMatrix")
 S3method("findAssocs", "TermDocumentMatrix")
 S3method("inspect", "TermDocumentMatrix")
@@ -217,5 +219,7 @@ S3method("as.DocumentTermMatrix", "default")
 S3method("as.TermDocumentMatrix", "TermDocumentMatrix")
 S3method("as.TermDocumentMatrix", "DocumentTermMatrix")
 S3method("as.TermDocumentMatrix", "default")
+
+export("read_dtm_Blei_et_al")
 
 useDynLib("tm")
